--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
+  "short_name": "Camden Ko",
+  "name": "Camden Ko - Fullstack Developer",
   "icons": [
     {
       "src": "favicon.ico",
@@ -9,5 +9,7 @@
     }
   ],
   "start_url": "./index.html",
-  "display": "standalone"
+  "display": "standalone",
+  "background_color": "#8B56FF",
+  "theme_color": "#8B56FF"
 }
